--- a/app1/uwsgi_app1.ini
+++ b/app1/uwsgi_app1.ini
@@ -3,7 +3,7 @@ module = app
 callable = app
 master = true
 processes = 1
-socket = /tmp/uwsgi.sock
+socket = /tmp/uwsgi_app1.sock
 chmod-socket = 666
 vacuum = true
 die-on-term = true
