--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# HOME_PATH = './'
-# WEB_PATH = './web/'
-# ROOT_PATH = '/var/www/html/'
+HOME_PATH = './'
+WEB_PATH = './web/'
+ROOT_PATH = '/var/www/html/'
