--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,18 +1,9 @@
 server {
 	listen 5000;
-	server_name  app1.douzo.top www.app1.douzo.top;
+	server_name  localhost;
 
 	location / {
 		include uwsgi_params;
-		uwsgi_pass unix:///tmp/uwsgi_app1.sock;
-	}
-}
-server {
-	listen 5000;
-	server_name  app2.douzo.top www.app2.douzo.top;
-
-	location / {
-		include uwsgi_params;
-		uwsgi_pass unix:///tmp/uwsgi_app2.sock;
+		uwsgi_pass unix:///tmp/uwsgi.sock;
 	}
 }
