--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11
 
 RUN mkdir -p /var/www/html/
 COPY requirements.txt /var/www/html/
-COPY uwsgi_app1.ini /var/www/html/
+COPY uwsgi.ini /var/www/html/
 
 COPY app.py /var/www/html/
 WORKDIR /var/www/html/
