--- a/web/uwsgi.ini
+++ b/web/uwsgi.ini
@@ -3,7 +3,7 @@ module = app
 callable = app
 master = true
 processes = 1
-socket = /tmp/uwsgi_app1.sock
+socket = /tmp/uwsgi.sock
 chmod-socket = 666
 vacuum = true
 die-on-term = true
