--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 
 services:
-  app:
+  app1:
     image: python:3.11
-    build: ./web/
-    container_name: app
+    build: ./app1/
+    container_name: app1
     working_dir: /var/www/html/
     volumes:
       - ./web/:${ROOT_PATH}
