--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app1:
     image: python:3.11
     build: ./app1/
-    container_name: app1
+#    container_name: app1
     working_dir: /var/www/html/
     volumes:
       - ./web/:/var/www/html/
