--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
 	listen 5000;
-	server_name  localhost;
+	server_name  app1.douzo.top www.app1.douzo.top;
 
 	location / {
 		include uwsgi_params;
