--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,15 @@ server {
 
 	location / {
 		include uwsgi_params;
-		uwsgi_pass unix:///tmp/uwsgi.sock;
+		uwsgi_pass unix:///tmp/uwsgi_app1.sock;
+	}
+}
+server {
+	listen 5000;
+	server_name  app2.douzo.top www.app2.douzo.top;
+
+	location / {
+		include uwsgi_params;
+		uwsgi_pass unix:///tmp/uwsgi_app2.sock;
 	}
 }
