--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,27 @@
 version: '3'
 
 services:
-  app:
+  app1:
     image: python:3.11
-    build: ${WEB_PATH}
-    container_name: app
-    working_dir: ${ROOT_PATH}
+    build: ./app1/
+    container_name: app1
+    working_dir: /var/www/html/
     volumes:
-      - ${WEB_PATH}:${ROOT_PATH}
+      - ./web/:/var/www/html/
       - socket:/tmp
-    command: uwsgi --ini ${ROOT_PATH}uwsgi.ini
+    command: uwsgi --ini /var/www/html/uwsgi_app1.ini
+    restart: always
+    tty: true
+
+  app2:
+    image: python:3.11
+    build: ./app2/
+    container_name: app2
+    working_dir: /var/www/html/
+    volumes:
+      - ./web/:/var/www/html/
+      - socket:/tmp
+    command: uwsgi --ini /var/www/html/uwsgi_app2.ini
     restart: always
     tty: true
 
@@ -18,7 +30,7 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ${HOME_PATH}nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - socket:/tmp
 
 volumes:
