--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: app1
     working_dir: /var/www/html/
     volumes:
-      - ./web/:/var/www/html/
+      - ./app1/:/var/www/html/
       - socket:/tmp
     command: uwsgi --ini /var/www/html/uwsgi_app1.ini
     restart: always
@@ -19,7 +19,7 @@ services:
     container_name: app2
     working_dir: /var/www/html/
     volumes:
-      - ./web/:/var/www/html/
+      - ./app2/:/var/www/html/
       - socket:/tmp
     command: uwsgi --ini /var/www/html/uwsgi_app2.ini
     restart: always
