--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,8 +8,26 @@ server {
 	}
 }
 server {
-	listen 5001;
+	listen 80;
 	server_name  app1.douzo.top www.app1.douzo.top;
+
+	location / {
+		include uwsgi_params;
+		uwsgi_pass unix:///tmp/uwsgi_app1.sock;
+	}
+}
+server {
+	listen 5001;
+	server_name  app2.douzo.top www.app2.douzo.top;
+
+	location / {
+		include uwsgi_params;
+		uwsgi_pass unix:///tmp/uwsgi_app2.sock;
+	}
+}
+server {
+	listen 80;
+	server_name  app2.douzo.top www.app2.douzo.top;
 
 	location / {
 		include uwsgi_params;
