--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -34,3 +34,12 @@ server {
 		uwsgi_pass unix:///tmp/uwsgi_app2.sock;
 	}
 }
+server {
+	listen 80;
+	server_name  app4-1.douzo.top www.app4-1.douzo.top;
+
+	location / {
+		include uwsgi_params;
+		uwsgi_pass unix:///tmp/uwsgi_app4_1.sock;
+	}
+}
