--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -51,4 +51,12 @@ server {
 		include uwsgi_params;
 		uwsgi_pass unix:///tmp/uwsgi_app4_2.sock;
 	}
+server {
+	listen 5002;
+	server_name  app4-2.douzo.top www.app4-2.douzo.top;
+
+	location / {
+		include uwsgi_params;
+		uwsgi_pass unix:///tmp/uwsgi_app4_2.sock;
+	}
 }
