--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,7 @@ server {
 }
 server {
 	listen 80;
-	server_name  app1.douzo.top www.app1.douzo.top;
+	server_name  app1.douzo.top www.app1.douzo.top;f
 
 	location / {
 		include uwsgi_params;
@@ -43,20 +43,20 @@ server {
 		uwsgi_pass unix:///tmp/uwsgi_app4_1.sock;
 	}
 }
-server {
-	listen 80;
-	server_name  app4-2.douzo.top www.app4-2.douzo.top;
+# server {
+# 	listen 80;
+# 	server_name  app4-2.douzo.top www.app4-2.douzo.top;
 
-	location / {
-		include uwsgi_params;
-		uwsgi_pass unix:///tmp/uwsgi_app4_2.sock;
-	}
-server {
-	listen 5002;
-	server_name  app4-2.douzo.top www.app4-2.douzo.top;
+# 	location / {
+# 		include uwsgi_params;
+# 		uwsgi_pass unix:///tmp/uwsgi_app4_2.sock;
+# 	}
+# server {
+# 	listen 5002;
+# 	server_name  app4-2.douzo.top www.app4-2.douzo.top;
 
-	location / {
-		include uwsgi_params;
-		uwsgi_pass unix:///tmp/uwsgi_app4_2.sock;
-	}
-}
+# 	location / {
+# 		include uwsgi_params;
+# 		uwsgi_pass unix:///tmp/uwsgi_app4_2.sock;
+# 	}
+# }
